--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ input{
     color: #07514d;
     border-radius: 4px;
 }
-
 #search-button{
     border: 1px solid #ffffff;
     border-radius: 8px;
@@ -44,15 +43,14 @@ input{
     margin: 30px 90px;
 }
 .weather-block{
-
-color: #000000;
-padding: 15px 30px 15px 100px;
-border-radius: 8px;
+    color: #000000;
+    padding: 15px 30px 15px 100px;
+    border-radius: 8px;
 }
 .content{
     display: flex;
     flex-direction: row;
-justify-content: space-between;
+    justify-content: space-between;
 }
 .weather-data{
     color:  #ffffff; 
@@ -64,29 +62,27 @@ justify-content: space-between;
     font-weight: bold;
 }
 .weather-block-header{
-color: #fcf63d;
+    color: #fcf63d;
 }
 .city-info{
     color: #ffffff8f;
     font-size: 13px;
 }
 #weather-icon{
- width: 60%;
- margin: 10px;
-   
+    width: 60%;
+    margin: 10px;
 }
 .weather-characteristics{
-   display: flex; 
-flex-direction: row;
-   width: 120%;
-   height: 200px;
-   margin-top: 20px;
-
+    display: flex; 
+    flex-direction: row;
+    width: 120%;
+    height: 200px;
+    margin-top: 20px;
 }
 .row{
     display: flex; 
-   flex-direction: row;
-   padding-top: 10px;
+    flex-direction: row;
+    padding-top: 10px;
 }
 .part1{
     padding: 10px 40px 0 0;
@@ -96,10 +92,9 @@ flex-direction: row;
 }
 .block2{
     display: flex; 
-justify-content: center;
+    justify-content: center;
 }
 .buttonFiveDays{
-
     color:#fcf63d;
 }
 .buttonFiveDays:hover{
@@ -107,11 +102,11 @@ justify-content: center;
     transition: 1s;
     cursor: pointer;
 }
-#containerFiveDays{
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-justify-content: space-around;
+#fivedays-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .weather-block-day{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -124,15 +119,12 @@ justify-content: space-around;
 }
 .day-icon{
     width: 70%;
-
     margin-top: 10px;
     margin-left: 25%;
- 
 }
 .day-block-header{
-   text-align: center;
-color:#fcf63d;
-
+    text-align: center;
+    color:#fcf63d;
 }
 
 
